--- a/css/style-home.css
+++ b/css/style-home.css
@@ -346,6 +346,7 @@ a{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
 }
 
 #courses-slider-header h2{
@@ -650,6 +651,7 @@ animation:fade 1s;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
 }
 #events-header h2{
     text-align:center;
@@ -790,6 +792,7 @@ animation:fade 1s;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
 }
 #latest-post-header h2{
     text-align:center;
