hide previous and next butttons

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -181,6 +181,11 @@
         justify-content: space-between;
     }
 
+    .swiper-button-next , .swiper-button-prev{
+        display:none;
+        visibility:hidden;
+    }
+
     .left-sided{
         width:90%;
         margin-bottom: 30px;
