--- a/css/style-home.css
+++ b/css/style-home.css
@@ -255,8 +255,8 @@ a{
 }
 
 @keyframes fadepara {
-  from{margin-left:100px;opacity:0;}
-  to{margin-left:0px;opacity:1;}
+  from{opacity:0;}
+  to{opacity:1;}
 }
 
 .landing-center-content a{
